OY-3358 : Check access with hakukohderyhmät